// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiIconTip is rendered 1`] = `
<span
  class="euiToolTipAnchor"
>
  <span
    data-euiicon-type="questionInCircle"
    tabindex="0"
  >
    aria-label
  </span>
</span>
`;

exports[`EuiIconTip props color is rendered as the icon color 1`] = `
<span
  class="euiToolTipAnchor"
>
  <span
    color="warning"
    data-euiicon-type="questionInCircle"
    tabindex="0"
  >
    Info
  </span>
</span>
`;

exports[`EuiIconTip props size is rendered as the icon size 1`] = `
<span
  class="euiToolTipAnchor"
>
  <span
    data-euiicon-type="questionInCircle"
    tabindex="0"
  >
    Info
  </span>
</span>
`;

exports[`EuiIconTip props type is rendered as the icon 1`] = `
<span
  class="euiToolTipAnchor"
>
  <span
    data-euiicon-type="alert"
    tabindex="0"
  >
    Info
  </span>
</span>
`;
